tests/ivg/invalid/font_size_out_of_range.ivg
format IVG-3
BOUNDS 0,0,10,10
font size:1000001
